--- a/CHANGELOG
+++ b/CHANGELOG
@@ -166,7 +166,7 @@ Detailed changes:
 Release:     raylib 4.0 - 8th Anniversary Edition (05 November 2021)
 -------------------------------------------------------------------------
 KEY CHANGES:
- - Naming consistency and coherency: Complete review of the library: sintax, naming, comments, decriptions, logs...
+ - Naming consistency and coherency: Complete review of the library: syntax, naming, comments, decriptions, logs...
  - Event Automation System: Support for input events recording and automatic re-playing, useful for automated testing and more!
  - Custom game-loop control: Intended for advance users that want to control the events polling and the timming mechanisms
  - rlgl 4.0: Completely decoupling from platform layer and raylib, intended for standalone usage as single-file header-only
