--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,10 +9,11 @@ Release:     raylib 4.5 (xx February 2023) -WIP-
 KEY CHANGES:
  - ADDED: M3D model format support with animations
  - ADDED: GLTF animation support
- - ADDED: QOA audio format support (import/export) -WIP-
- - rlgl redesign to avoid render batch triangles limits pre-check: rlCheckRenderBatchLimit()
- - rshapes simplification to minimize the requirement of rlgl functionality, now it only depends on 6 functions 
- - rl_gputex.h: Compressed textures loading, required by rtextures module, has been moved to a separate self-contained library
+ - ADDED: QOA audio format support (import/export)
+ - REDESIGNED: rcamera module, new implementation from scratch, simpler and more extendable
+ - REDESIGNED: rlgl module to avoid render batch triangles limits pre-check: rlCheckRenderBatchLimit()
+ - REDESIGNED: rshapes module to minimize the rlgl dependency, now only 6 low-level functions required!
+ - ADDED: rl_gputex self-contained module for compressed textures loading, used by rtextures module
  - raygui 3.5: New version of the immediate-mode gui system for tools development with raylib
 
 Detailed changes:
@@ -20,6 +21,7 @@ Detailed changes:
 [core] ADDED: Basic gamepad support for Android (#2709) by @deniska
 [core] ADDED: Support CAPS/NUM lock keys registering if locked
 [core] ADDED: _GNU_SOURCE define on Linux (#2729)
+[core] ADDED: SetWindowIcons() to set multiple icon image sizes
 [core] `WARNING`: RENAMED: Exported raylib version symbol to raylib_version #2671
 [core] REMOVED: Touch points on touch up events on Android (#2711) by @deniska
 [core] REVIEWED: Window position setup on InitWindow() (#2732) by @RandomErrorMessage
@@ -43,6 +45,14 @@ Detailed changes:
 [core] REVIEWED: Initial window position for display-sized fullscreen (#2742) by @daipom
 [core] REVIEWED: Sticky touches input (#2857) by @ImazighenGhost
 [core] REVIEWED: Enable GetWindowHandle() on macOS (#2915) by @Not-Nik
+[core] REVIEWED: Window position always inits centered in current monitor
+[core] REVIEWED: IsWindowFocused() to consider Android App state (#2935)
+[core] REVIEWED: GetMonitorWidth() and GetMonitorHeight() (#2934)
+[core] REVIEWED: GetWindowHandle() to return Linux window (#2938)
+[core] REVIEWED: WindowDropCallback(), additional security check (#2943)
+[rcamera] REDESIGNED: New implementation from scratch (#2563) by @Crydsch
+[rcamera] REVIEWED: Make orbital camera work as expected (#2926) by @JeffM2501
+[rcamera] REVIEWED: Multiple reviews on the new implementation
 [rlgl] ADDED: OpenGL ES 2.0 support on PLATFORM_DESKTOP (#2840) by @wtnbgo
 [rlgl] ADDED: Separate blending modes for color and alpha, BLEND_CUSTOM_SEPARATE (#2741)
 [rlgl] ADDED: rlSetBlendFactorsSeparate and custom blend mode modification checks (#2741) by @pure01fx
@@ -58,6 +68,7 @@ Detailed changes:
 [rlgl] REVIEWED: rlMultMatrixf(), use const pointer (#2807) by @planetis-m
 [rlgl] REVIEWED: Expose OpenGL blending mode factors and functions/equations
 [rlgl] REVIEWED: rLoadTextureDepth(), issue with depth textures on WebGL (#2824)
+[rlgl] REVIEWED: rlUnloadFramebuffer() (#2937)
 [raymath] ADDED: Vector2LineAngle() (#2887)
 [raymath] REVIEWED: Vector2Angle() (#2829, #2832) by @AlxHnr, @planetis-m
 [shapes] ADDED: CheckCollisionPointPoly() (#2685) by @acejacek
@@ -95,10 +106,14 @@ Detailed changes:
 [models] REVIEWED: LoadIQM() (#2676)
 [models] REVIEWED: Simplify .vox signature check (#2752) by @CrezyDud
 [models] REVIEWED: LoadIQM(), support bone names loading if available (#2882) by @PencilAmazing
+[models] REVIEWED: GenMeshTangents(), avoid crash on missing texcoords data (#2927)
 [models] `WARNING`: REMOVED: DrawCubeTexture(), DrawCubeTextureRec(), functions moved to new example: `models_draw_cube_texture`
+[audio] ADDED: Full support for QOA audio file format
+[audio] ADDED: Mixed audio processor (#2929) by @hatkidchan
 [audio] ADDED: IsWaveReady()`, IsSoundReady(), IsMusicReady() (#2892) by @RobLoach
 [audio] REVIEWED: Clear PCM buffer state when closing audio device (#2736) by @veins1
 [audio] REVIEWED: Android backend selected (#2118, #2875) by @planetis-m
+[audio] REVIEWED: Change default threading model for COM objects in miniaudio
 [multi] ADDED: IsShaderReady(), IsImageReady(), IsFontReady() (#2892) by @RobLoach
 [multi] ADDED: IsModelReady(), IsMaterialReady(), IsTextureReady(), IsRenderTextureReady() (#2895) by @RobLoach
 [multi] REVIEWED: Multiple code/comment typos by @sDos280
@@ -113,6 +128,7 @@ Detailed changes:
 [examples] REVIEWED: core_camera_2d_platformer (#2687) by @skylar779
 [examples] REVIEWED: core_input_gamepad.c (#2903) by @planetis-m
 [examples] REVIEWED: core_custom_frame_control
+[examples] REVIEWED: core_drop_files (#2943)
 [examples] REVIEWED: text_rectangle_bounds (#2746) by @SzieberthAdam
 [examples] REVIEWED: textures_image_processing, added gaussian blurring (#2775) by @nobytesgiven
 [examples] REVIEWED: models_billboard, highlighting rotation and draw order (#2779) by @nobytesgiven
@@ -124,6 +140,7 @@ Detailed changes:
 [build] ADDED: Linkage library -latomic on Linux (only required for ARM32)
 [build] ADDED: Required frameworks on macOS (#2793) by @SpexGuy
 [build] ADDED: WASM support for Zig build (#2901) by @Not-Nik
+[build] ADDED: New raylib examples as VS2022 project (to raylib solution)
 [build] REVIEWED: config.h format and inconsistencies
 [build] REVIEWED: Zig build to latest master, avoid deprecated functions (#2910) by @star-tek-mb
 [build] REVIEWED: CMake project template to easily target raylib version (#2700) by @RobLoach
@@ -137,6 +154,7 @@ Detailed changes:
 [build] REVIEWED: Several compilation warnings (for strict rules)
 [build] REVIEWED: All github workflows using deprecated actions
 [build] REVIEWED: CMake when compiling for web (#2820) by @object71
+[build] REVIEWED: DLL build on Windows (#2951) by @Skaytacium
 [build] REVIEWED: Avoid MSVC warnings in raylib project (#2871) by @JeffM2501
 [build] REVIEWED: Paths in .bat files to build examples (#2870) by @masoudd
 [build] REVIEWED: CMake, use GLVND for old cmake versions (#2826) by @simendsjo
@@ -153,6 +171,7 @@ Detailed changes:
 [bindings] ADDED: TurboRaylib (Object Pascal) by @turborium
 [bindings] ADDED: Kaylib (Kotlin/Native) by @Its-Kenta
 [bindings] ADDED: Raylib-Nelua (Nelua) by @Its-Kenta
+[bindings] ADDED: Cyber binding by @fubark
 [misc] REVIEWED: Update external libraries to latest versions
 
 -------------------------------------------------------------------------
